--- a/seq_env.ipynb
+++ b/seq_env.ipynb
@@ -14,6 +14,9 @@
    "metadata": {},
    "source": [
     "TODO:\n",
+    "    - agent states:\n",
+    "        - implement agent.copy_memory_to_targets()\n",
+    "        - check that state of train model and predict model are equal\n",
     "    - discriminator into env\n",
     "        - reverse postprocessing to set range for actions\n",
     "        - make it more efficient by making discriminator stateful and always feed a single time step\n",
@@ -541,6 +544,7 @@
     "    # Reset episode\n",
     "    cumul_reward, done = np.zeros((batch_size, 1)), 0\n",
     "    states = env.reset()\n",
+    "    agent.reset()\n",
     "    actions, rewards = [], []\n",
     "    \n",
     "    step = 0\n",
@@ -553,8 +557,11 @@
     "        env.render()\n",
     "        # Actor picks an action (following the deterministic policy)   \n",
     "        \n",
+    "        # We want the memory of the agent to update here:\n",
     "        actions = agent.policy_action(states)\n",
     "        states, rewards, dones, _ = env.step(actions) #new_states -> bs of new_state\n",
+    "        # We need to copy the states from actor and critic to their target networks now\n",
+    "        agent.copy_memory_to_targets()\n",
     "        q_values = agent.critic.target_model.predict([states, agent.actor.target_model.predict(states)])\n",
     "        # Compute critic target\n",
     "\n",
